# graphql-attempt

./: README.md  pyproject.toml  schema.py
